@@ -1,14 +1,9 @@
-require File.expand_path(File.join(File.dirname(__FILE__), *%w[example_helper]))
+require File.expand_path(File.join(File.dirname(__FILE__), *%w[spec_helper]))
 
 describe LogBuddy do
   describe "init" do
     after  { reset_safe_log_buddy_mode }
 
-    it "should call log_gems! if log_gems is true" do
-      LogBuddy::GemLogger.expects(:log_gems!)
-      LogBuddy.init :log_gems => true
-    end
-    
     it "doesnt mixin to object if SAFE_LOG_BUDDY is true" do
       LogBuddy.expects(:init).never
       ENV["SAFE_LOG_BUDDY"] = "true"
